# hitpad-rs

./: Cargo.toml  Makefile  build.rs  memory-rp2040.x  memory-rp235xa.x  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: release.yml
.helix/: languages.toml
src/: config.rs  keyboard.rs  macros.rs  main.rs  types.rs
src/hardware/: mod.rs  types.rs  validation.rs
