[package]
name = "hitpad-rs"
version = "0.1.0"
edition = "2024"

[features]
default = ["mcu-rp2040"]
mcu-rp2040 = ["embassy-rp/rp2040"]
mcu-rp2350 = ["embassy-rp/rp235xa"]

[dependencies]
embassy-executor = { version = "0.10.0", features = ["defmt", "platform-cortex-m", "executor-thread", "nightly"] }
embassy-rp = { version = "0.10.0", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl"] }
embassy-time = { version = "0.5.1", features = ["defmt", "defmt-timestamp-uptime", "tick-hz-1_000_000"] }

embassy-usb = { version = "0.6.0", features = ["defmt", "usbd-hid", "max-interface-count-3", "max-handler-count-3"] }
usbd-hid = "0.10.0"

bitflags = "2.11.1"
cortex-m = { version = "0.7.7", features = ["inline-asm"] }
cortex-m-rt = "0.7.5"
defmt = "1.1.0"
defmt-rtt = "1.2.0"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }
static_cell = "2.1.1"
portable-atomic = { version = "1.13", features = ["critical-section"] }

[profile.release]
debug = 2
lto = "fat"
opt-level = 3
